--- a/src/index.html
+++ b/src/index.html
@@ -60,6 +60,13 @@
    <script src="./assets/js/config.js"></script>
    <script src="./assets/js/swiper-bundle.min.js"></script>
 
+   <script src="./assets/lib_1/wow/wow.min.js"></script>
+   <script src="./assets/lib_1/easing/easing.min.js"></script>
+   <script src="./assets/lib_1/waypoints/waypoints.min.js"></script>
+   <script src="./assets/lib/counterup/counterup.min.js"></script>
+   <script src="./assets/lib/owlcarousel/owl.carousel.min.js"></script>
+
+
    <!-- Main JS File -->
    <script src="./assets/js/main.js"></script>
    <script src="./assets/js/demos/demo-2.js"></script>
