--- a/src/index.html
+++ b/src/index.html
@@ -22,22 +22,20 @@
     <meta name="msapplication-TileColor" content="#cc9966">
     <meta name="msapplication-config" content="./assets/images/icons/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
-    <link rel="stylesheet" href="./assets/vendor/line-awesome/line-awesome/line-awesome/css/line-awesome.min.css">
     <!-- Plugins CSS File -->
     <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./assets/css/plugins/owl-carousel/owl.carousel.css">
-    <link rel="stylesheet" href="./assets/css/plugins/magnific-popup/magnific-popup.css">
-    <link rel="stylesheet" href="./assets/css/plugins/jquery.countdown.css">
     <!-- Main CSS File -->
     <link rel="stylesheet" href="./assets/css/style.css">
-    <link rel="stylesheet" href="./assets/css/skins/skin-demo-13.css">
-    <link rel="stylesheet" href="./assets/css/demos/demo-13.css">
-    <link rel="stylesheet" href="./assets/css/plugins/nouislider/nouislider.css">
+
+   <!-- Libraries Stylesheet -->
+   <link href="./assets/lib_1/animate/animate.min.css" rel="stylesheet">
+   <link href="./assets/lib_1/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
     <link href="./assets/css/swiper.css" rel="stylesheet" type="text/css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Manrope&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 
 <body>
@@ -50,10 +48,6 @@
    ></script>
    <script src="./assets/js/jquery.min.js"></script>
    <script src="./assets/js/bootstrap.bundle.min.js"></script>
-   <script src="./assets/js/jquery.hoverIntent.min.js"></script>
-   <script src="./assets/js/jquery.waypoints.min.js"></script>
-   <script src="./assets/js/superfish.min.js"></script>
-   <script src="./assets/js/owl.carousel.min.js"></script>
    <script src="./assets/js/jquery.plugin.min.js"></script>
    <script src="./assets/js/jquery.magnific-popup.min.js"></script>
    <script src="./assets/js/jquery.countdown.min.js"></script>
