--- a/src/index.html
+++ b/src/index.html
@@ -7,16 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Minh Minh KaliVisa --Blog cá nhân, chuyên về dịch vụ visa chuyên viên KaliVisa</title>
     <meta name="keywords" content="HTML5 Template">
-    <meta name="description" content="Molla - Bootstrap eCommerce Template">
+    <meta name="description" content="Minh Minh KaliVisa --Blog cá nhân, chuyên về dịch vụ visa chuyên viên KaliVisa">
     <meta name="author" content="p-themes">
     <base href="/">
     <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="./assets/images/icons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/icons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./assets/images/icons/favicon-16x16.png">
-    <link rel="manifest" href="./assets/images/icons/site.html">
-    <link rel="mask-icon" href="./assets/images/icons/safari-pinned-tab.svg" color="#666666">
-    <link rel="shortcut icon" href="./assets/images/icons/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://kalivisa.com/favicon/apple-icon-57x57.png">
     <meta name="apple-mobile-web-app-title" content="Molla">
     <meta name="application-name" content="Molla">
     <meta name="msapplication-TileColor" content="#cc9966">
@@ -31,10 +26,11 @@
    <link href="./assets/lib_1/animate/animate.min.css" rel="stylesheet">
    <link href="./assets/lib_1/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
     <link href="./assets/css/swiper.css" rel="stylesheet" type="text/css" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Manrope&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&family=Poppins:wght@200;300;400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 
