--- a/src/index.html
+++ b/src/index.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Minh Minh KaliVisa --Blog cá nhân, chuyên về dịch vụ visa chuyên viên KaliVisa</title>
+    <title>Minh Minh Visa --Blog cá nhân, chuyên về dịch vụ visa chuyên viên Visa</title>
     <meta name="keywords" content="HTML5 Template">
-    <meta name="description" content="Minh Minh KaliVisa --Blog cá nhân, chuyên về dịch vụ visa chuyên viên KaliVisa">
+    <meta name="description" content="Minh Minh Visa --Blog cá nhân, chuyên về dịch vụ visa chuyên viên KaliVisa">
     <meta name="author" content="p-themes">
     <base href="/">
     <!-- Favicon -->
-    <link rel="icon" type="image/png" sizes="32x32" href="https://kalivisa.com/favicon/apple-icon-57x57.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/logo.png">
     <meta name="apple-mobile-web-app-title" content="Molla">
     <meta name="application-name" content="Molla">
     <meta name="msapplication-TileColor" content="#cc9966">
